--- a/index.html
+++ b/index.html
@@ -188,135 +188,42 @@
 </div>
 
 <div class="ugly">
-    <div class="ugly__img"><a href="#"><img src="img/ugly_bluegrapefruit.jpg" alt=""></a>
-        <a href="#"><strong>[못난이] 메로골드(청자몽) 6개/12개<br>[순차출고]</strong><br></a>
-        <p><del>11,900원</del> 9,900원</p>
-        <span><img src="img/goods_icon_ugly.gif" alt=""></span>
-        <span><img src="img/good_icon_new.gif " alt=""></span>
-    </div>
-    <div class="ugly__img"><a href="#"><img src="img/ugly_lemon.jpg" alt=""></a>
-        <a href="#"><strong>[못난이] 레몬(20개/40개/50개)<br>[순차출고]</strong><br></a>
-        <p><del>15,900원</del> 9,900원</p>
-        <span><img src="img/goods_icon_ugly.gif" alt=""></span>
-        <span><img src="img/good_icon_special.gif " alt=""></span>
-        <span><img src="img/good_icon_popular.gif" alt=""></span>
-    </div>
-    <div class="ugly__img"><a href="#"><img src="img/ugly_lime.jpg" alt=""></a>
-        <a href="#"><strong>[못난이] 라임(1kg/2kg/4kg/8kg)<br>[순차출고]</strong></a>
-        <p><del>10,900원</del> 9,900원</p>
-        <span><img src="img/goods_icon_ugly.gif" alt=""></span>
-        <span><img src="img/good_icon_special.gif " alt=""></span>
-    </div>
-    <div class="ugly__img"><a href="#"><img src="img/ugly_orange.jpg" alt=""></a>
-        <a href="#"><strong>[못난이] 레드 자몽(8개/16개)<br>[순차출고]</strong><br></a>
-        <p><del>14,900원</del> 9,900원</p>
-        <span><img src="img/goods_icon_ugly.gif" alt=""></span>
-    </div>
+    <div class="ugly_box"></div>
+    <div class="ugly_box"></div>
+    <div class="ugly_box"></div>
+    <div class="ugly_box"></div>
 </div>
 
 <!--해외 직수입 과일 시작-->
 <div id="title">
     <h1>해외 직수입 과일</h1>
 </div>
-<div class="import">
-    <div class="import__img"><a href="#"><img src="img/import_avocado.jpg" alt=""></a>
-        <a href="#"><strong>아보카도 8개/15개</strong></a>
-        <p><del>20,900원</del> 10,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_banana.jpg" alt=""></a>
-        <a href="#"><strong>만나 바나나 2송이 2.4kg</strong></a>
-        <p>10,900원</p>
-        <span><img src="img/goods_icon_order.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif" alt=""></span>
-        <span><img src="img/good_icon_popular.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_coconut_box.png" alt=""></a>
-        <a href="#"><strong>코코넛 20과 1박스(17kg)</strong></a>
-        <p><del>35,900원</del> 26,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_crimson.jpg" alt=""></a>
-        <a href="#"><strong>씨없는 적포도(크림슨) XL사이즈 1.8kg</strong></a>
-        <p><del>20,900원</del> 10,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
 
+<div class="import">
+    
     <!--해외 직수입 과일 (1)-->
-    <div class="import__img"><a href="#"><img src="img/import_dragonfruit.jpg" alt=""></a>
-        <a href="#"><strong>용과 10과 3개/6개</strong></a>
-        <p><del>15,900원</del> 12,900원</p>
-        <span><img src="img/goods_icon_order.gif" alt=""></span>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif" alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_dragonfruit_red.jpg" alt=""></a>
-        <a href="#"><strong>레드 용과 10과 3개/6개</strong></a>
-        <p><del>17,900원</del> 15,900원</p>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_grapefruit_red.jpg" alt=""></a>
-        <a href="#"><strong>이스라엘 레드 자몽 8개/12개</strong></a>
-        <p><del>21,900원</del> 16,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_grapefruit_red_box.jpg" alt=""></a>
-        <a href="#"><strong>이스라엘 레드 자몽 20개(1박스)</strong></a>
-        <p><del>39,900원</del> 34,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
 
     <!--해외 직수입 과일 (2)-->
-    <div class="import__img"><a href="#"><img src="img/import_lemon.jpg" alt=""></a>
-        <a href="#"><strong>미국 썬키스트 레몬 140과 15개/24개</strong></a>
-        <p><del>15,900원</del> 12,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_lemon_box.jpg" alt=""></a>
-        <a href="#"><strong>미국 썬키스트 레몬 140과 60개(1박스)</strong></a>
-        <p><del>39,900원</del> 36,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_lime.jpg" alt=""></a>
-        <a href="#"><strong>라임 1kg/2kg/3kg/4kg/6kg/8kg</strong></a>
-        <p><del>20,900원</del> 10,900원</p>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-        <span><img src="img/good_icon_popular.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_muscat.jpg" alt=""></a>
-        <a href="#"><strong>씨없는 청포도 XL사이즈 1.8kg/3.6kg</strong></a>
-        <p><del>20,900원</del> 10,900원</p>
-        <span><img src="img/good_icon_new.gif" alt=""></span>
-    </div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+
+    <!--해외 직수입 과일 (2)-->
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
 
     <!--해외 직수입 과일 (3)-->
-    <div class="import__img"><a href="#"><img src="img/import_orange.jpg" alt=""></a>
-        <a href="#"><strong>미국 네이블 오렌지 88과 14개/24개</strong></a>
-        <p><del>20,900원</del> 10,900원</p>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_pineapple.jpg" alt=""></a>
-        <a href="#"><strong>만나 골드 파인애플 5수 2개</strong></a>
-        <p><del>20,900원</del> 14,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_popular.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_pineapple_stick.jpg" alt=""></a>
-        <a href="#"><strong>[가격행사]후레쉬컷 파인애플 스틱형 1kg</strong></a>
-        <p>1,900원</p>
-        <span><img src="img/good_icon_sale.gif" alt=""></span>
-        <span><img src="img/good_icon_recomm.gif " alt=""></span>
-    </div>
-    <div class="import__img"><a href="#"><img src="img/import_pomegranate.jpg" alt=""></a>
-        <a href="#"><strong>미국 석류 11과 5개/8개</strong></a>
-        <p><del>28,900원</del> 24,900원</p>
-        <span><img src="img/good_icon_recomm.gif" alt=""></span>
-        <span><img src="img/good_icon_new.gif " alt=""></span>
-    </div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
+    <div class="import_box"></div>
 </div>
 
 <!--국산 제철 먹거리 시작-->
@@ -324,107 +231,39 @@
     <h1>국산 제철 먹거리</h1>
 </div>
 <div class="season">
-    
-    <!--국산 제철 먹거리 박스-->
-    <div class="season__box">
 
         <!--국산 제철 먹거리(1)-->
-        <div class="season__img"><a href="#"><img src="img/season_cherrytomato.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[자연터]<br></strong>
-                <strong>무지개 컬러 방울 토마토 750g 2팩/4팩</strong></a>
-            <p><del>25,900원</del> 21,900원</p>
-            <span><img src="img/good_icon_recomm.gif" alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_mandarinorange.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]<br></strong>
-                <strong>제주 조생 감귤 2.5kg/4.5kg(2S-2L)</strong></a>
-            <p><del>13,900원</del> 12,900원</p>
-            <span><img src="img/good_icon_recomm.gif" alt=""></span>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_napacabbage.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]</strong><strong> HACCP 인증</strong><br>
-                <strong>절임배추/양념 3kg/5kg/10kg/20kg</strong></a>
-            <p><del>19,900원</del> 16,900원</p>
-            <span><img src="img/good_icon_recomm.gif" alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_passionfruit.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]</strong><strong> 무농약 인증</strong><br>
-                <strong>백향과 패션후르츠(대/특대사이즈) 1kg</strong></a>
-            <p><del>19,900원</del> 14,900원</p>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
 
         <!--국산 제철 먹거리 (2)-->
-        <div class="season__img"><a href="#"><img src="img/season_peach_white.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]<br></strong>
-                <strong>햇사레 백도 복숭아 2kg(5~6과)</strong></a>
-            <p>22,900원</p>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_peach_yellow.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]<br></strong>
-                <strong>햇사레 황도 복숭아 2kg(5~6과)</strong></a>
-            <p>22,900원</p>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_persimmon.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]<br></strong>
-                <strong>창원 단감 2.5kg/5kg(소과~대과)</strong></a>
-            <p><del>15,900원</del> 12,900원</p>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
-        <div class="season__img"><a href="#"><img src="img/season_sweetpotato.jpg" alt=""></a>
-            <a href="#"><strong class="namecolor">[산지 직배송]<br></strong>
-                <strong>태안 호박고구마, 꿀고구마 3kg/5kg</strong></a>
-            <p><del>15,900원</del> 12,900원</p>
-            <span><img src="img/good_icon_recomm.gif" alt=""></span>
-            <span><img src="img/good_icon_new.gif " alt=""></span>
-        </div>
-    </div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
+        <div class="season_box"></div>
 </div>
 
 <!--파트너스 시작-->
 <div id="title">
     <h1>파트너스</h1>
 </div>
+
 <div class="partners">
 
     <!--파트너스 (1)-->
-    <div class="partners__img"><a href="#"><img src="img/partners_wildflowerhoney.jpg" alt=""></a>
-        <a href="#"><strong>보나 야생화 벌꿀 300g</strong></a>
-        <p>19,000원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_beepollen.jpg" alt=""></a>
-        <a href="#"><strong>보나비폴렌 120g</strong></a>
-        <p>15,000원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_hijiki.jpg" alt=""></a>
-        <a href="#"><strong>완도의 신선한 염장 톳 200g*5팩</strong></a>
-        <p>16,800원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_eckloniastolonifera.jpg" alt=""></a>
-        <a href="#"><strong>꼬들한 식감 염장 곰피 200g*5팩</strong></a>
-        <p>12,300원</p>
-    </div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
 
     <!--파트너스 (2)-->
-    <div class="partners__img"><a href="#"><img src="img/partners_abalone.jpg" alt=""></a>
-        <a href="#"><strong>명품 완도 참전복 1kg</strong></a>
-        <p>36,000원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_penshell.jpg" alt=""></a>
-        <a href="#"><strong>달달한 국산 자연산 키조개 관자 500g</strong></a>
-        <p>22,500원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_purpplebutterclam.jpg" alt=""></a>
-        <a href="#"><strong>바다의 보물 자연산 대합 1kg</strong></a>
-        <p>14,900원</p>
-    </div>
-    <div class="partners__img"><a href="#"><img src="img/partners_turbansnail.jpg" alt=""></a>
-        <a href="#"><strong>달큰한 살이 가득 자연산 참소라 1kg</strong></a>
-        <p>19,900원</p>
-    </div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
+    <div class="partners_box"></div>
+
 </div>
 
 <!-- 카테고리 -->
@@ -445,30 +284,10 @@
     <h1>만나몰 이야기</h1>
 </div>
 <div class="story">
-    <div class="story__box">
-        <div class="story__box__img"><a href="#"><img src="img/story1.jpg" alt=""></a></div>
-        <h4>만나몰, 플로리다 자몽<br>5+5 특가 이벤트</h4>
-        <p class="story__catchphrase">m-STORY</p><br>
-        <p>만나몰은 상품의 품질뿐 아니라<br>브랜드 스토리까지 귀를 기울입니다.</p>
-    </div>
-    <div class="story__box">
-        <div class="story__box__img"><a href="#"><img src="img/story2.jpg" alt=""></a></div>
-        <h4>프리미엄 과일과 생화 부케를 담은<br>만나아트 추석선물세트 출시</h4>
-        <p class="story__catchphrase">m-STORY</p><br>
-        <p>만나몰은 상품의 품질뿐 아니라<br>브랜드 스토리까지 귀를 기울입니다.</p>
-    </div>
-    <div class="story__box">
-        <div class="story__box__img"><a href="#"><img src="img/story3.png" alt=""></a></div>
-        <h4>프리미엄 과일과 생화를<br>디자인에 담은 만나아트 출범</h4>
-        <p class="story__catchphrase">m-STORY</p><br>
-        <p>만나몰은 상품의 품질뿐 아니라<br>브랜드 스토리까지 귀를 기울입니다.</p>
-    </div>
-    <div class="story__box">
-        <div class="story__box__img"><a href="#"><img src="img/story4.jpg" alt=""></a></div>
-        <h4>웨이처치 러브더월드 감사편지</h4><br>
-        <p class="story__catchphrase">m-STORY</p><br>
-        <p>만나몰은 상품의 품질뿐 아니라<br>브랜드 스토리까지 귀를 기울입니다.</p>
-    </div>
+    <div class="story_box"></div>
+    <div class="story_box"></div>
+    <div class="story_box"></div>
+    <div class="story_box"></div>
 </div>
 </section>
 
